force-app/main/default/objects/TL_Est_Project__c/fields/BuildingPercent__c.field-meta.xml
<CustomField>
    <fullName>BuildingPercent__c</fullName>
    <formula>Building_Size_SF__c /  Site_Size_SF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Building Percent</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>