force-app/main/default/objects/TL_Est_Project__c/fields/Site_Size_Acres__c.field-meta.xml
<CustomField>
    <fullName>Site_Size_Acres__c</fullName>
    <formula>Site_Size_SF__c / 43560</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Size (Acres)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>