force-app/main/default/objects/TL_Est_Project__c/fields/Site_Size_SF__c.field-meta.xml
<CustomField>
    <fullName>Site_Size_SF__c</fullName>
    <label>Site Size (SF)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>